updated polybar config

--- a/.config/polybar/bars/top.conf
+++ b/.config/polybar/bars/top.conf
@@ -23,10 +23,12 @@ padding-right = 2
 module-margin-right = 2
 
 font-0 = "Hack:pixelsize=11:antialias=true;4"
+font-1 = "icons\-in\-terminal:pixelsize=11:antialias=true;4"
+
 
 modules-left = i3
 modules-center = date
-modules-right = volume bitcoin memory cpu light wlan battery
+modules-right = volume bitcoin memory cpu light battery
 
 tray-position = right
 tray-padding = 2
