--- a/.config/i3/config
+++ b/.config/i3/config
@@ -78,9 +78,8 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec rofi -show run
-bindsym $mod+d exec --no-startup-id "rofi -modi drun,run,themes:~/.config/rofi/themeswitch.sh -show run"
-bindsym $mod+shift+t exec --no-startup-id "rofi -modi drun,run,themes:~/.config/rofi/themeswitch.sh -show themes"
-bindsym $mod+z exec --no-startup-id "rofi -modi drun,run,themes:~/.config/rofi/themeswitch.sh -show drun"
+bindsym $mod+d exec --no-startup-id "rofi -modi drun,run -show run"
+bindsym $mod+z exec --no-startup-id "rofi -modi drun,run -show drun"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
