--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -10,7 +10,8 @@ include-file = /home/julianliebl/.config/polybar/bars/top.conf
 ;=====================================================
 
 [colors]
-background = #212121
+#background = #212121
+background = ${xrdb:background}
 foreground = ${xrdb:color7:#222}
 foreground-alt = ${xrdb:color7:#222}
 primary = ${xrdb:color1:#222}
@@ -59,7 +60,7 @@ strip-wsnumbers = true
 
 label-focused = "%name% %icon%"
 label-focused-foreground = ${colors.bg}
-label-focused-background = ${colors.yellow}
+label-focused-background = ${colors.white}
 label-focused-padding = 1
 
 label-unfocused = "%name% %icon%"
@@ -73,8 +74,8 @@ label-urgent-background = ${colors.bg-trans}
 label-urgent-padding = 1
 
 label-visible = "%name% %icon%"
-label-visible-foreground = ${colors.bg}
-label-visible-background = ${colors.bg-alt}
+label-visible-foreground = ${colors.white}
+label-visible-background = ${colors.bg-trans}
 label-visible-padding = 1
 
 [module/xwindow]
