theme change to nord

--- a/.config/polybar/bars/top.conf
+++ b/.config/polybar/bars/top.conf
@@ -6,7 +6,7 @@ foreground = ${colors.foreground}
 
 locale = de_DE.utf8
 width = 100%
-height = 30
+height = 40
 border-size = 0
 border-top-size = 10
 border-left-size = 10
@@ -22,13 +22,13 @@ padding-left = 0
 padding-right = 2
 module-margin-right = 2
 
-font-0 = "Hack:pixelsize=11:antialias=true;4"
-font-1 = "icons\-in\-terminal:pixelsize=11:antialias=true;4"
+font-0 = "Hack Nerd Font:pixelsize=14:antialias=true;3"
+font-1 = "ValMob:pixelsize=18:antialias=true;5"
 
 
-modules-left = i3
+modules-left = valmob i3
 modules-center = date
-modules-right = volume bitcoin memory cpu light battery
+modules-right = volume bitcoin memory cpu xbacklight battery
 
 tray-position = right
 tray-padding = 2
