--- a/.config/i3/config
+++ b/.config/i3/config
@@ -56,7 +56,7 @@ floating_modifier $mod
 # start a terminal
 #bindsym $mod+Return exec guake
 #bindsym $mod+Return exec urxvt
-bindsym $mod+Return exec termite
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
