--- a/.config/i3/config
+++ b/.config/i3/config
@@ -56,7 +56,8 @@ floating_modifier $mod
 # start a terminal
 #bindsym $mod+Return exec guake
 #bindsym $mod+Return exec urxvt
-bindsym $mod+Return exec alacritty
+#bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -226,3 +227,18 @@ for_window [class="Pavucontrol"] floating enable
 #assign [class="^jetbrains-studio"]        $w1
 #assign [class="^Deluge"]                 $w8
 
+
+bar {
+    font pango:DejaVu Sans Mono, FontAwesome 12
+    position top
+    status_command i3status-rs ~/.config/i3status-rust/config.toml
+    colors {
+        separator #666666
+        background #222222
+        statusline #dddddd
+        focused_workspace #0088CC #0088CC #ffffff
+        active_workspace #333333 #333333 #ffffff
+        inactive_workspace #333333 #333333 #888888
+        urgent_workspace #2f343a #900000 #ffffff
+    }
+}
