--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,8 @@
 include ./nord.conf
 
+allow_remote_control yes
+listen_on unix:@mykitty
+
 font_size 12
 font_family      Hack Regular Nerd Font Complete Mono
 bold_font        Hack Bold Nerd Font Complete Mono
