--- a/.config/i3status-rust/config.toml
+++ b/.config/i3status-rust/config.toml
@@ -39,3 +39,7 @@ format = "%a %d/%m %R"
 [[block]]
 block = "battery"
 if_command = "test -e /sys/class/power_supply/BAT0"
+
+[[block]]
+block = "battery"
+if_command = "test -e /sys/class/power_supply/BAT1"
