--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,3 +12,14 @@ bold_italic_font Hack Bold Italic Nerd Font Complete Mono
 
 scrollback_pager_history_size 1024
 
+confirm_os_window_close 0
+
+
+detect_urls no
+copy_on_select clipboard
+strip_trailing_spaces smart
+select_by_word_characters ${}/&@_.
+focus_follows_mouse yes
+mouse_map right press grabbed,ungrabbed no-op
+mouse_map right click grabbed,ungrabbed paste_from_clipboard
+allow_hyperlinks no
