--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -208,11 +208,12 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 backend = "glx"
+#backend = "xr_glx_hybrid"
 #backend = "xrender";
 
 # Enable/disable VSync.
-# vsync = false
-vsync = true;
+vsync = false
+# vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
